[gd_scene load_steps=4 format=3 uid="uid://t4k7486yxq2u"]

[ext_resource type="Script" uid="uid://grpcmm5pblfu" path="res://qte.gd" id="1_0aa5o"]

[sub_resource type="Shader" id="Shader_utyyg"]
code = "shader_type canvas_item;

// RADIAL PROGRESSBAR BY PENGGRIN (<https://github.com/penggrin12>)
// (INTENDED FOR A HEALTH BAR)

// ORIGINAL SHADER: https://www.shadertoy.com/view/WdcGRM
// BY <https://www.shadertoy.com/user/calx>

#define TWO_PI 6.28318530718

uniform vec3 first_color: source_color = vec3(1.0);
uniform vec3 second_color: source_color = vec3(1.0);
uniform vec3 third_color: source_color = vec3(1.0);
uniform vec3 outline_color: source_color = vec3(0.0);
uniform vec3 unfilled_color: source_color = vec3(0.443);
uniform float value: hint_range(0.0, 1.0, 0.01) = 1.0;

uniform float smooth_ = 0.005;
uniform float width_in = 0.85;
uniform float width_out = 0.95;
uniform float border_width = 0.03;

vec4 radial_progress(vec2 UV_, float VAL, float SMOOTH, float IR, float OR)
{
	vec2 uv = (UV_ * 2.0) - 1.0;
	vec2 origin = vec2(0.0, 0.0);

	float ir = IR;
	float or = OR;
	float d = length(uv);
	float ring = smoothstep(or + SMOOTH, or - SMOOTH, d) - smoothstep(ir + SMOOTH, ir - SMOOTH, d);
	float a = atan(uv.y - origin.y, uv.x - origin.x);  
	float theta = (a < 0.0) ? (a + TWO_PI) / TWO_PI : a / TWO_PI;
	float bar = step(theta, VAL);
	float ui = ring * bar;

	vec4 colour = vec4(ui);

	return colour;
}

void fragment()
{
	vec3 innerColor;
	
	if (value >0.6)
		innerColor = first_color;
	else if (value > 0.3)
		innerColor = second_color;
	else
		innerColor = third_color;
	
	vec4 primary = vec4(innerColor, 1.0) * radial_progress(UV, value, smooth_, width_in, width_out);
	vec4 outline = vec4(outline_color, 1.0) * radial_progress(UV, 100, smooth_, width_in - border_width, width_out + border_width);
	
	vec4 unfilled = vec4(unfilled_color, 1.0) * radial_progress(UV, 100, smooth_, width_in, width_out);

	if (primary != vec4(0.0, 0.0, 0.0, 0.0))
		unfilled = vec4(0.0, 0.0, 0.0, 0.0);

	COLOR = primary + (unfilled + outline);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qryj"]
shader = SubResource("Shader_utyyg")
shader_parameter/first_color = Color(0.25490198, 1, 0, 1)
shader_parameter/second_color = Color(0.78039217, 0.7882353, 0, 1)
shader_parameter/third_color = Color(0.8669104, 2.189949e-06, 1.0588765e-06, 1)
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/unfilled_color = Color(0.443, 0.443, 0.443, 1)
shader_parameter/value = 1.0
shader_parameter/smooth_ = 0.005
shader_parameter/width_in = 0.78
shader_parameter/width_out = 0.95
shader_parameter/border_width = 0.03

[node name="Qte" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0aa5o")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1qryj")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -62.0
offset_right = 57.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -34.5
offset_right = 19.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "N"

[node name="Success_Label" type="Label" parent="ColorRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 46.0
offset_right = 83.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.43633232
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "sucess"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 261.0
offset_right = 633.0
offset_bottom = 382.0
flat = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
